fix(rwd): Fixed iOS mobile header and preloader problem with bottom toolbar ( overlapping content )

--- a/src/components/layout/Header/MobileHeader.module.scss
+++ b/src/components/layout/Header/MobileHeader.module.scss
@@ -71,7 +71,7 @@
     position: fixed;
     width: 100vw;
     top: 0;
-    height: 100vh;
+    height: 100dvh;
     right: -100%;
     background-color: white;
     padding: 100px 32px 32px 32px;
